--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "styled-components": "^6.1.13"
   },
   "scripts": {
